# docgen

./: Cargo.toml  README.md  doc-20241008.md  docgen.bat
.github/workflows/: main.yml
src/: main.rs
src/req/: gemini.rs
src/suppot/: docx.rs
